--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,7 @@
   border: 6px solid white;
   border-radius: 50%;
   animation: lds-ring 1.3s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: var(--clr-blue) transparent transparent transparent;
+  border-color: rgb(0, 149, 255) transparent transparent transparent;
 }
 
 .lds-ring div:nth-child(1) {
@@ -145,7 +145,7 @@
   height: 24px;
   border: 3px solid rgba(255, 255, 255, .3);
   border-radius: 50%;
-  border-top-color: orange;
+  border-top-color: rgb(0, 149, 255);
   animation: spin 1s ease-in-out infinite;
   -webkit-animation: spin 1s ease-in-out infinite;
 }
